welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:7: error: too many arguments for method droite: ()Unit
    		droite(2)
                      ^